Fix: link-btn shift down

--- a/src/components/login section/login.scss
+++ b/src/components/login section/login.scss
@@ -2,6 +2,7 @@
    .login-form, .register-form {
       display: flex;
       flex-direction: column;
+      margin-bottom: 2rem;
 
       label {
         text-align: left;
